Ivonne dice HOLA

--- a/2023I_MCE5_ExamenParcial1.html
+++ b/2023I_MCE5_ExamenParcial1.html
@@ -2913,6 +2913,7 @@ Ecuador y genere el archivo <strong>rarespecies.csv</strong>.</p>
 <p>¿Cuáles son sus variables (dependiente(s) e independiente(s))?
 Explique cada una de las variables</p>
 <p><strong>Respuesta:</strong></p>
+<p>Hola uy otro hola</p>
 </div>
 <div id="gráfica-e-hipótesis" class="section level2" number="2.4">
 <h2><span class="header-section-number">2.4</span> Gráfica e
