--- a/2023I_MCE5_ExamenParcial1.html
+++ b/2023I_MCE5_ExamenParcial1.html
@@ -2835,7 +2835,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore">Examen parcial 1 - Métodos Cuantitativos en
 Ecología</h1>
 <h4 class="author">Ivonne Carpio</h4>
-<h4 class="date">23 de mayo de 2023</h4>
+<h4 class="date">23 de mayo de 2023.</h4>
 
 </div>
 
