Ivonne Carpio - Hipótesis Ejercicio 2.1

--- a/2023I_MCE5_ExamenParcial1.html
+++ b/2023I_MCE5_ExamenParcial1.html
@@ -2899,6 +2899,17 @@ siguientes preguntas:</p>
 <h2><span class="header-section-number">2.1</span> Para su potencial
 investigación ¿Cuál sería su hipótesis ? (Explique)</h2>
 <p><strong>Respuesta:</strong></p>
+<p>Hipotesis 0(nula): La “facilitación” no tiene ningun efecto en el
+equilibrio de especies cuando crecen en grupo o parches.</p>
+<p>Hipotesis 1(alterna): La “facilitación” ayuda a equelibrar el
+crecimiento de todas las especies cuando crecen en grupo o en
+parches.</p>
+<p>En el artículo menciona que existen plantas en etapas maduras y otras
+en etapas jovenes que muchas veces el crecimiento de plantas maduras no
+permite el crecimiento de plantas jovenes. la facilitación es la
+encargada de controlar el crecimiento excesivo y proteger a las especies
+que son diferentes o unicas. Ademas de ser causante de ser la adaptación
+de suelos.</p>
 </div>
 <div id="muestra" class="section level2" number="2.2">
 <h2><span class="header-section-number">2.2</span> Muestra</h2>
