Ivonne Carpio - Ejercicio 2.3 Variables

--- a/2023I_MCE5_ExamenParcial1.html
+++ b/2023I_MCE5_ExamenParcial1.html
@@ -2924,7 +2924,12 @@ Ecuador y genere el archivo <strong>rarespecies.csv</strong>.</p>
 <p>¿Cuáles son sus variables (dependiente(s) e independiente(s))?
 Explique cada una de las variables</p>
 <p><strong>Respuesta:</strong></p>
-<p>Hola uy otro hola</p>
+<p>Variable dependiente: Ecosistema, Facilitador</p>
+<p>Variable independiente: Plantas, Clima, Calidad del suelo</p>
+<p>El ecosistema de las plantas y el facilitador son variables
+dependientes porque estos son parte de la naturaleza y siguen un proceso
+natural. En cambio las plantas tienen temporadas que abundan más y otras
+que no germian sea por condición de clima u condición de suelo.</p>
 </div>
 <div id="gráfica-e-hipótesis" class="section level2" number="2.4">
 <h2><span class="header-section-number">2.4</span> Gráfica e
