--- a/2023I_MCE5_ExamenParcial1.html
+++ b/2023I_MCE5_ExamenParcial1.html
@@ -2987,6 +2987,8 @@ adecuadas. Considere realizar lo siguiente:</p>
 {"columns":[{"label":["AbundanceGalumma"],"name":[1],"type":["dbl"],"align":["right"]},{"label":["Ocurrence"],"name":[2],"type":["dbl"],"align":["right"]},{"label":["AdundanceTotal"],"name":[3],"type":["dbl"],"align":["right"]},{"label":["Proportion"],"name":[4],"type":["dbl"],"align":["right"]},{"label":["SubstrateDensity"],"name":[5],"type":["dbl"],"align":["right"]},{"label":["WaterContent"],"name":[6],"type":["dbl"],"align":["right"]},{"label":["Substrate"],"name":[7],"type":["chr"],"align":["left"]},{"label":["Shrub"],"name":[8],"type":["chr"],"align":["left"]},{"label":["Topography"],"name":[9],"type":["chr"],"align":["left"]}],"data":[{"1":"8","2":"1","3":"140","4":"0.057142857","5":"39.18","6":"350.15","7":"Sphagn1","8":"Few","9":"Hummock"},{"1":"3","2":"1","3":"268","4":"0.011194030","5":"54.99","6":"434.81","7":"Litter","8":"Few","9":"Hummock"},{"1":"1","2":"1","3":"186","4":"0.005376344","5":"46.07","6":"371.72","7":"Interface","8":"Few","9":"Hummock"},{"1":"1","2":"1","3":"286","4":"0.003496503","5":"48.19","6":"360.50","7":"Sphagn1","8":"Few","9":"Hummock"},{"1":"2","2":"1","3":"199","4":"0.010050251","5":"23.55","6":"204.13","7":"Sphagn1","8":"Few","9":"Hummock"},{"1":"1","2":"1","3":"209","4":"0.004784689","5":"57.32","6":"311.55","7":"Sphagn1","8":"Few","9":"Hummock"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
+<p>Tenemos datos sobre correlación de agua, proporción, abundancia, etc.
+con lo cúal podremos ver la presencia de ácaros en musgos</p>
 <ul>
 <li><p>Realizar regresiones lineales de cada variable de respuesta y
 variables efectoras, univariable o multivariable. Verifique los
